Fixed the issue that the background color was not displayed

--- a/Resources/QtStyleSheets/WorkSpaceRightPanel.qss
+++ b/Resources/QtStyleSheets/WorkSpaceRightPanel.qss
@@ -1,3 +1,7 @@
 RightPanel#RightPanel {
-    background-color: #ffffff !important;
+    background-color: #2a2a2a;
+}
+
+#SearchBox, #ScrollArea {
+    border: none;
 }
