--- a/Resources/QtStyleSheets/WorkSpaceLeftPanel.qss
+++ b/Resources/QtStyleSheets/WorkSpaceLeftPanel.qss
@@ -1,15 +1,25 @@
 LeftPanel#LeftPanel {
-    background-color: #f5f5f5 !important;
-    min-width: 80px;
+    background-color: #303030;
 }
 
 
 
+#ProjectPage {
+    border: 1 solid transparent;
+    border-radius: 5px;
+    height: 32px;
+}
+
+#ProjectPage:pressed {
+    background-color: #4A4A4A;
+    border-radius: 5px;
+}
+
 QPushButton#OptionsMenuButton {
     background-color: transparent;
     border: 1px solid transparent;
-    min-width: 24px;
-    min-height: 24px;
+    width: 24px;
+    height: 24px;
 }
 
 QPushButton#OptionsMenuButton:hover {
